# tspay-payment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: django.yml
config/: settings.py  urls.py
payment/: admin.py  models.py  serializers.py  signature.py  tests.py  urls.py  utils.py  views.py
templates/errors/: 404.html
templates/payment/: return.html
